# wallstreetbets

./: .gitignore  Cargo.toml
.github/: Dockerfile  entrypoint.sh  main.workflow
.github/workflows/: push.yml  release.yml
src/: cpuinfo.rs  main.rs
